
	* pokernetwork/pokeravatar.py: When used server side, the error
	packet is returned to the client instead of being discarded.

	* tests/test-pokerexplain.py.in: adapt to new return value

2008-02-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test99_testTinyFunctions): Wrote function.
	(PokerAvatarTestCase.tinyFunctions): Wrote function.

2008-02-17  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.readyToPlay):
	Wrote function.
	(PokerAvatarTestCase.dealTable): Wrote function.
	(PokerAvatarTestCase.test15_handPlay): Wrote function.
	(PokerAvatarTestCase.joinTable): Added gameId as a parameter.
	(PokerAvatarTestCase.sitTable): Added gameId as a parameter.
	(PokerAvatarTestCase.autoBlindAnte): Wrote function.
	(PokerAvatarTestCase.sitTable): Renamed function to seatTable.
	(PokerAvatarTestCase.sitTable): Wrote a new function by this name.
	(PokerAvatarTestCase.beginHandSetup): Wrote function.
	(PokerAvatarTestCase.doBlindPost): Wrote function.
	(PokerAvatarTestCase.startHandAndReceiveCards): Wrote function.

2008-02-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test12_buyIntoGame): Wrote function.
	(PokerAvatarTestCase.buyInTable): Wrote function.
	(PokerAvatarTestCase.test13_stats): Wrote function.
	(PokerAvatarTestCase.statsQuery): Wrote function.

2008-02-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.joinTable):
	Removed myGame variable; no longer needed.
	Changed currency_serial for Table2 to 0.

2008-02-11  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.sitTable):
	Removed extraneous prints.
	(PokerAvatarTestCase.test10_explainFailsOnceAtTable): Wrote
	function.
	(PokerAvatarTestCase.forceExplain): Wrote function.
	(PokerAvatarTestCase.test11_loginWithPasswordTooLong): Wrote
	function.
	(PokerAvatarTestCase.loginWithPasswordTooLong): Wrote function.